fix: remove unsupported JVM flag from CommonScalaTestModule